--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -59,7 +59,7 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         transition: $transition1;
       }
 
