--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -18,6 +18,7 @@
     }
 
     .connections {
+      flex-wrap: wrap;
       justify-content: space-evenly;
       min-width: 40%;
       max-width: 100%;
