Make connect buttons keyboard accessible

--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -25,6 +25,11 @@
       .tileContainer {
         margin-left: 1rem;
         margin-right: 1rem;
+        padding-bottom: 0;
+
+        background: unset;
+        border: 0;
+        color: unset;
       }
     }
 
