--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -158,6 +158,7 @@
           min-width: 0 !important;
           line-height: 100% !important;
           width: max-content !important;
+          min-height: 40px !important;
 
           svg {
             max-width: 16px !important;
