style: mobile devices & low-height wide-screens styling
* fixed issues with the wide-low-height screens (e.g. ipad landscape, full-hd desktop);
* refactored scss — styles were moved to the pages/index.vue and scoped
* -dark mode shadows applied
* popup's ul lists styled properly

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -239,11 +239,28 @@ button.-lg.-circle {
       font-size: 1.5rem;
       font-family: $firaSans;
 
+      @media screen and (max-width: $mobile) {
+        line-height: 100% !important;
+        padding: 0.5rem 1rem !important;
+      }
+
       & > .close {
         width: 2.2rem !important;
         height: 2.2rem !important;
         line-height: 2rem !important;
+
+        @media screen and (max-width: $mobile) {
+          width: 1.5rem !important;
+          height: 1.5rem !important;
+          line-height: 1rem !important;
+
+          i {
+            font-size: 1rem !important;
+          }
+        }
       }
+
+
 
       @media (max-width: $mobile) {
         display: flex;
@@ -258,6 +275,12 @@ button.-lg.-circle {
     .body {
       padding-right: 28px !important;
       padding-left: 28px !important;
+
+      ul {
+        padding-left: 0.5rem;
+        margin-left: 0.5rem;
+        margin-top: 1rem;
+      }
     }
 
     & > div:last-child {
