--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -100,6 +100,16 @@ $shadowColor5: #0000000c; //rgba(0, 0, 0, .05);
 $shadowColor8: #00000015; //rgba(0, 0, 0, .08);
 $shadowColor10: #0000001a; //rgba(0, 0, 0, .10);
 
+.-dark
+{
+  /* Shadow colors */
+  $shadowColor3: #FFFFFF07;
+  $shadowColor4: #FFFFFF0a; //rgba(255, 255, 255 .04);
+  $shadowColor5: #FFFFFF0c; //rgba(255, 255, 255 .05);
+  $shadowColor8: #FFFFFF15; //rgba(255, 255, 255 .08);
+  $shadowColor10: #FFFFFF1a; //rgba(255, 255, 255 .10);
+}
+
 /* Shadows */
 $shadowInset: inset 1px 1px 1px $shadowColor3;
 $popoverShadow: 0 10px 40px $shadowColor5;
