feat: zigzag link added (#232)
* feat: zigzag link added for the rinkeby & mainnet
* style: button group styled
* refactor: extra fix to avoid errors + updated version of the nuxt-core-module dep
* fix: rename Deposit operation to Top up

Closes ZKF-1377

Co-authored-by: Jack Hamer <jackhamer0990@gmail.com>

--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -153,6 +153,26 @@
       height: max-content;
 
       .balances {
+        .balancesButtonGroup {
+          .button {
+            width: 31%;
+            display: inline-flex !important;
+            align-items: center;
+            margin: 0 !important;
+            padding: 0 15px 0 10px !important;
+            line-height: 100% !important;
+            min-width: fit-content !important;
+            min-height: 40px !important;
+
+            svg {
+              top: initial !important;
+              max-width: 12px !important;
+              width: auto !important;
+              height: auto !important;
+            }
+          }
+        }
+
         .balancesList .balanceItem {
           display: flex;
           height: max-content;
