feat: new top-up UO for the zkSync Wallet v1.x (#238)
* refactor: dropped unused computed & props of the v-icon

* refactor: optimized & refactored Account page

 - dropped component-block Balances (used once)
 - added BalanceInfo modal component (following generic modal architecture)
 - optimized the code inside Account page

* feat: top-up page built

* fix: orbiter fixed

* fix: divider styling

* fix: update code styles

Co-authored-by: andriidrebot <a.drebot@gmail.com>

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -92,9 +92,11 @@ body.inkline {
       }
     }
 
-    .planeIcon {
-      position: relative;
-      top: -2px;
+    &.-lg {
+      .planeIcon {
+        position: relative;
+        top: -2px;
+      }
     }
   }
 
