--- a/src/assets/style/components/custom/_input.scss
+++ b/src/assets/style/components/custom/_input.scss
@@ -116,7 +116,8 @@
   }
 }
 
-.spin-animation, .ri-loader-5-line {
+.spin-animation,
+.ri-loader-5-line {
   display: inline-block;
   animation: spin 0.5s linear 0s infinite;
 }
