--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -100,14 +100,13 @@ $shadowColor5: #0000000c; //rgba(0, 0, 0, .05);
 $shadowColor8: #00000015; //rgba(0, 0, 0, .08);
 $shadowColor10: #0000001a; //rgba(0, 0, 0, .10);
 
-.-dark
-{
+.-dark {
   /* Shadow colors */
-  $shadowColor3: #FFFFFF07;
-  $shadowColor4: #FFFFFF0a; //rgba(255, 255, 255 .04);
-  $shadowColor5: #FFFFFF0c; //rgba(255, 255, 255 .05);
-  $shadowColor8: #FFFFFF15; //rgba(255, 255, 255 .08);
-  $shadowColor10: #FFFFFF1a; //rgba(255, 255, 255 .10);
+  $shadowColor3: #ffffff07;
+  $shadowColor4: #ffffff0a; //rgba(255, 255, 255 .04);
+  $shadowColor5: #ffffff0c; //rgba(255, 255, 255 .05);
+  $shadowColor8: #ffffff15; //rgba(255, 255, 255 .08);
+  $shadowColor10: #ffffff1a; //rgba(255, 255, 255 .10);
 }
 
 /* Shadows */
