--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -21,7 +21,8 @@
     width: max-content;
     padding-top: 0 !important;
 
-    .zkwallet-logo, .projectLogo {
+    .zkwallet-logo,
+    .projectLogo {
       height: 55px;
       width: max-content;
 
