--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -32,15 +32,14 @@
     height: auto;
   }
 
-
-
   .externalWalletPopover .popover {
     width: 330px;
     padding: 20px 30px;
 
     &.-dark {
       .iconsBlock a {
-        i, .ov-icon {
+        i,
+        .ov-icon {
           color: $darkViolet;
         }
       }
@@ -48,7 +47,8 @@
 
     &.-light {
       .iconsBlock a {
-        i, .ov-icon {
+        i,
+        .ov-icon {
           color: $white;
         }
       }
@@ -91,7 +91,8 @@
           background-color: $violet;
           border-radius: 50%;
 
-          i, .ov-icon {
+          i,
+          .ov-icon {
             display: block;
             width: 100%;
             height: 100%;
