--- a/src/assets/style/vars/_transitions.scss
+++ b/src/assets/style/vars/_transitions.scss
@@ -1,6 +1,6 @@
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity .5s ease;
+  transition: opacity 0.5s ease;
   will-change: opacity;
 }
 
@@ -19,16 +19,18 @@
   opacity: 0 !important;
 }
 
-
-.slide-vertical-fade-enter-active, .slide-vertical-fade-leave-active {
+.slide-vertical-fade-enter-active,
+.slide-vertical-fade-leave-active {
   transition: 0.2s ease;
   transition-property: transform, opacity;
   will-change: transform, opacity;
 }
 
-.slide-vertical-fade-enter, .slide-vertical-fade-leave-to {
+.slide-vertical-fade-enter,
+.slide-vertical-fade-leave-to {
   opacity: 0;
 }
+
 .slide-vertical-fade-enter {
   transform: translateY(-15px);
 }
