fix: checkout link fixed, menu items updated, fixed dropdown arrow coloring
Additionally: code linted & formatted

Closes ZKF-1773

--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -10,11 +10,14 @@ $green: #1d9b4a;
 $darkViolet: #171a49; //MajorDark
 $mediumViolet: #2f3264;
 $lightViolet: #8c8dfc;
+$lightVioletSemiTransparent: #8c8dfc66;
 $red: #f25f5c;
 $link-color: $lightViolet;
 $color-secondary: $violet;
 $openSans: "Open Sans", "sans-serif";
 $colorLightGray: #e9ecef;
+
+$hoverGray: #f2f2f2;
 
 /* Uplifting */
 $bgDesign: #f4f5f7;
