--- a/src/assets/style/_dev.scss
+++ b/src/assets/style/_dev.scss
@@ -9,14 +9,22 @@
   display: inline-flex !important;
 }
 
-.bottomDivider {
-  border-bottom: 1px solid $gray !important;
-}
-
 .dropdown {
   &.firstElementHovered {
     span.arrow:after {
-      border-bottom-color: $light !important;
+      border-bottom-color: $hoverGray !important;
+    }
+  }
+
+  .bottomDivider {
+    border-bottom: 1.25px solid $lightVioletSemiTransparent !important;
+  }
+
+  &.-dark {
+    &.firstElementHovered {
+      span.arrow:after {
+        border-bottom-color: lighten($darkViolet, 5) !important;
+      }
     }
   }
 }
