--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -54,7 +54,6 @@ body {
       &.-dark {
         & > .menu[data-popper-placement="bottom"] {
           .arrow::after {
-            border-bottom-color: $mediumViolet !important;
           }
 
           &.firstElementHovered {
@@ -419,8 +418,7 @@ body.inkline.-light {
 
           &:hover {
             color: $lightViolet !important;
-            background-color: darken($white, 5) !important;
-            border-color: darken($bgLight, 5) !important;
+            background-color: $hoverGray !important;
           }
         }
       }
