--- a/src/assets/style/blocks/_cryptoProviders.scss
+++ b/src/assets/style/blocks/_cryptoProviders.scss
@@ -1,100 +1,3 @@
-<template>
-  <div class="cryptoProviders">
-    <provider-ramp
-      v-if="providers.includes('ramp')"
-      class="providerOption"
-      @providerError="setError"
-    />
-    
-    <provider-banxa
-      v-if="providers.includes('banxa')"
-      class="providerOption"
-      @providerError="setError"
-    />
-
-    <provider-moonpay
-      v-if="providers.includes('moonpay')"
-      class="providerOption"
-      @providerError="setError"
-    />
-
-    <provider-utorg
-      v-if="providers.includes('utorg')"
-      class="providerOption"
-      @providerError="setError"
-    />
-
-    <provider-okex
-      v-if="providers.includes('okex')"
-      class="providerOption"
-      @providerError="setError"
-    />
-
-    <provider-bybit
-      v-if="providers.includes('bybit')"
-      class="providerOption"
-      @providerError="setError"
-    />
-
-    <provider-layer-swap
-      v-if="providers.includes('layerSwap')"
-      class="providerOption"
-      @providerError="setError"
-    />
-
-    <provider-orbiter
-      v-if="providers.includes('orbiter')"
-      class="providerOption"
-      @providerError="setError"
-    />
-  
-    <provider-zk-sync
-      v-if="providers.includes('zksync')"
-      class="providerOption"
-      data-cy="deposit_provider_zksync"
-    />
-
-    <provider-zig-zag
-      v-if="providers.includes('zigzag')"
-      class="providerOption"
-      @providerError="setError"
-    />
-
-    <block-modals-deposit-error
-      :error-text="errorText"
-      @close="errorText = undefined"
-    />
-  </div>
-</template>
-
-<script lang="ts">
-import Vue, { PropType } from "vue";
-
-type Providers = "banxa" | "ramp" | "orbiter" | "moonpay" | "zksync" | "layerSwap" | "okex" | "bybit" | "utorg" | "zigzag";
-
-export default Vue.extend({
-  name: "Providers",
-  props: {
-    providers: {
-      type: Array as PropType<Providers[]>,
-      default: () => [],
-      required: false,
-    },
-  },
-  data() {
-    return {
-      errorText: undefined as string | undefined,
-    };
-  },
-  methods: {
-    setError(errorText: string) {
-      this.errorText = errorText;
-    },
-  },
-});
-</script>
-
-<style lang="scss">
 .cryptoProviders {
   margin-top: 1rem;
   display: grid;
@@ -104,6 +7,26 @@ export default Vue.extend({
   grid-auto-flow: row;
   grid-auto-rows: 52px;
   grid-gap: 11px;
+  &.transfer {
+    grid-auto-rows: 56px;
+    @media screen and (max-width: 560px) {
+      grid-template-columns: 100%;
+      grid-gap: 9px;
+    }
+
+    .providerOption label {
+      display: flex;
+      justify-content: space-between;
+      font-size: 16px;
+      font-weight: 600;
+      padding: 16px;
+      
+      img, svg {
+        height: 24px;
+        max-height: initial;
+      }
+    }
+  }
 
   .providerOption {
     display: flex;
@@ -143,6 +66,7 @@ export default Vue.extend({
       align-items: center;
       font-weight: 700;
       font-size: 18px;
+      line-height: 1.15;
       margin-bottom: 0;
       color: $black;
       transition: color $transition1;
@@ -202,4 +126,3 @@ export default Vue.extend({
     padding: 10px 0 !important;
   }
 }
-</style>
