--- a/src/assets/style/blocks/_networkSwitch.scss
+++ b/src/assets/style/blocks/_networkSwitch.scss
@@ -20,14 +20,13 @@
     justify-content: flex-start;
     width: 100%;
     height: 60px;
+    margin: 0;
     padding: 0 20px;
     text-decoration: none;
     border-bottom: 1px solid;
-    cursor: pointer;
     transition: $transition1;
     transition-property: background-color, color;
-    text-transform: capitalize;
-    margin: 0;
+    cursor: pointer;
 
     &:last-child {
       border-bottom: none;
@@ -39,6 +38,10 @@
 
     .selected {
       color: $green;
+    }
+
+    .networkName {
+      text-transform: capitalize;
     }
   }
 }
