refactor: fixing box background color and typo in color name

--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -34,7 +34,7 @@ body.inkline.-light .defaultLayout {
 
 body.inkline.-dark .defaultLayout {
   .tileBlock {
-    background: $darkViolet;
+    background: $mediumViolet;
 
     .tileHeadline {
       i,
