refactor: removing not supported wallets

--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -1,5 +1,5 @@
 $darkHyperlinkBlue: #161b48;
-$mediumHyperlinkBlue: #252e78;
+$midHyperlinkBlue: #252e78;
 $hyperlinkBlue: #4b5cf0;
 $lightHyperlinkBlue: #a5adf7;
 $lightHyperlinkBlueSemiTransparent: #c9cefa;
@@ -17,7 +17,7 @@ $blackViolet: $darkHyperlinkBlue;
 $violet: $hyperlinkBlue;
 $green: #1d9b4a;
 $darkViolet: $darkHyperlinkBlue;
-$mediumViolet: $mediumHyperlinkBlue;
+$mediumViolet: $midHyperlinkBlue;
 $lightViolet: $lightHyperlinkBlue;
 $lightVioletSemiTransparent: $lightHyperlinkBlueSemiTransparent;
 $red: #f25f5c;
