refactor: removing era announcement

--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -7,7 +7,6 @@ header {
 
   &.layout-header {
     position: fixed;
-    top: 32px;
     z-index: 3;
     @media screen and (max-width: $mobile) {
       position: fixed;
@@ -107,7 +106,7 @@ header {
       .badge {
         margin-top: -30px;
         padding: 0;
-        color: $lightViolet !important;
+        color: $darkGrey !important;
         font-weight: 400;
         font-size: 12px !important;
         letter-spacing: 1px;
@@ -189,7 +188,7 @@ header {
     }
 
     .pagesContainer {
-      background-color: $darkViolet;
+      background-color: $violet;
       box-shadow: $shadowTop;
     }
     .pagesContainer {
@@ -377,11 +376,11 @@ body.inkline.-dark header.layout-header {
   }
 
   .linksContainer .headerLink {
-    color: $lightViolet;
+    color: $darkGrey;
 
     &.nuxt-link-exact-active {
       color: darken($color: $white, $amount: 15);
-      background-color: darken($color: $darkViolet, $amount: 5);
+      background-color: darken($color: $violet, $amount: 5);
     }
   }
 }
