--- a/src/assets/style/blocks/_socialBlock.scss
+++ b/src/assets/style/blocks/_socialBlock.scss
@@ -11,13 +11,13 @@
     display: block;
     width: 20px;
     height: 20px;
-    color: $violet;
+    color: $black;
     font-weight: 300;
     text-decoration: none;
     transition: color $transition1;
 
     &:hover {
-      color: $lightViolet !important;
+      color: $darkGrey !important;
     }
 
     em,
