--- a/src/assets/style/vars/_custom.scss
+++ b/src/assets/style/vars/_custom.scss
@@ -1,13 +1,15 @@
-$white: #fff;
-$lighterGray: #f6f6f6;
-$mediumGrey: #f3f4f7;
-$gray: #9fa6b2;
-$darkerGray: #5d768e;
-$purple: #4e529a;
-$purpleDark: #32325d;
-$red: #f25f5c;
+@import "variables";
+
+$white: $white;
+$lighterGray: $lightGrey;
+$mediumGrey: $midGrey;
+$gray: $warmGrey;
+$darkerGray: $darkGrey;
+$purple: $violet;
+$purpleDark: $darkViolet;
+$red: $red;
 $redBg: #fdf2f2;
-$green: #5fb072;
+$green: $green;
 
 $openSans: "Open Sans", "sans-serif";
 
