--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -45,7 +45,7 @@ $accentBg: transparentize(
   $color: $warmGrey,
   $amount: 0.95,
 );
-$bgLight: $lightGrey;
+$bgLight: $midGrey;
 $bgSecondary: $black;
 
 /* Input */
