refactor: adding Sora font

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -247,7 +247,7 @@ button.-lg.-circle {
     > .header {
       font-weight: 400;
       font-size: 1.5rem;
-      font-family: $firaSans;
+      font-family: $sora;
 
       @media screen and (max-width: $mobile) {
         line-height: 100% !important;
@@ -524,12 +524,12 @@ button.-lg.-circle {
 
 .h1 {
   font-weight: 400 !important;
-  font-family: $firaSans;
+  font-family: $sora;
 }
 
 .h2 {
   font-weight: 600 !important;
-  font-family: $firaSans;
+  font-family: $sora;
 }
 
 ._margin-top-05 {
