--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -158,7 +158,7 @@ section.layoutContent {
 
       &:nth-child(2) {
         .total {
-          font-family: $firaSans;
+          font-family: $sora;
           letter-spacing: 0;
           font-size: 10px;
         }
