--- a/src/assets/style/blocks/_commonPageWrapper.scss
+++ b/src/assets/style/blocks/_commonPageWrapper.scss
@@ -28,7 +28,7 @@
       margin: 0;
       padding-bottom: 20px;
       font-weight: 400;
-      font-family: $firaSans;
+      font-family: $sora;
       text-align: center;
       align-items: center;
       display: inline-flex;
@@ -285,7 +285,7 @@
 
               .contactAddress {
                 font-size: 10px;
-                font-family: $firaSans;
+                font-family: $sora;
               }
             }
           }
