--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -88,7 +88,7 @@ body {
 
         .item {
           color: $white;
-          font: normal normal 16px/2rem $firaSans;
+          font: normal normal 16px/2rem $sora;
           transition: color $transition1;
 
           &:hover {
