--- a/src/assets/style/components/custom/_button.scss
+++ b/src/assets/style/components/custom/_button.scss
@@ -7,7 +7,7 @@
   color: $white;
   font-weight: 600;
   font-size: 15px;
-  font-family: $firaSans;
+  font-family: $sora;
   text-align: center;
   text-transform: uppercase;
   background-color: $purple;
