--- a/src/assets/style/components/custom/_input.scss
+++ b/src/assets/style/components/custom/_input.scss
@@ -12,7 +12,7 @@
     background: $white;
     border-radius: $borderRadiusMd;
     box-shadow: $inputContainerShadow;
-    transition: background-color .2s ease;
+    transition: background-color 0.2s ease;
 
     .pre {
       display: flex;
@@ -24,7 +24,7 @@
       color: $violet;
       font-weight: 600;
       font-size: 18px;
-      font-family: $openSans;
+      font-family: $sora;
       border-right: 2px solid $purple;
 
       img {
@@ -43,12 +43,12 @@
       color: $purpleDark;
       font-weight: 600;
       font-size: $fontSizeRegular;
-      font-family: $openSans;
+      font-family: $sora;
       text-align: left;
       background-color: $tempTransparent;
       border: none;
       outline: none !important;
-      transition: color .2s ease;
+      transition: color 0.2s ease;
 
       &::placeholder {
         color: $gray;
@@ -65,7 +65,7 @@
       color: $violet;
       font-size: $fontSizeRegular;
       border-left: 2px solid $purple;
-      transition: color .2s ease, border-color .2s ease;
+      transition: color 0.2s ease, border-color 0.2s ease;
     }
   }
 
