refactor: change favicon

--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -219,7 +219,7 @@ body {
         height: 100%;
         margin: 0 auto;
         padding: 0;
-        background-color: $darkViolet;
+        background-color: $violet;
         transition: $transition1;
 
         .column:last-child {
