chore: clean up ROLLUP 223 (#36)
* chore: replace RIFExplorer for RIF Rollup explorer

* chore: replacing Balance in L2 from Balance in RIF Rollup

* chore: commenting out NFTs tab for now

* chore: removing swap button

* chore: meta parameters and dark theme network and theme buttons

--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -107,7 +107,7 @@ header {
       .badge {
         margin-top: -30px;
         padding: 0;
-        color: $darkGrey !important;
+        color: $lightHyperlinkBlue !important;
         font-weight: 400;
         font-size: 12px !important;
         letter-spacing: 1px;
