--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -242,7 +242,7 @@ header {
     .userDropdownAddress {
       display: flex;
       flex-direction: column;
-      justify-content: stretch;
+      justify-content: center;
       width: max-content;
       height: 100%;
       padding: 0 13px 0 5px;
