--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -227,6 +227,26 @@
   }
 
   @media (max-width: $mobile) {
+    .transactionsButtonGroup {
+      gap: 5px;
+
+      .button {
+        display: inline-flex !important;
+        align-items: center;
+        margin: 0 !important;
+        padding: 0 15px 0 10px !important;
+        line-height: 100% !important;
+        min-width: fit-content !important;
+        min-height: 40px !important;
+
+        svg {
+          top: initial !important;
+          max-width: 12px !important;
+          width: auto !important;
+          height: auto !important;
+        }
+      }
+    }
     .transactionsTile {
       display: flex;
       flex-direction: column;
